kubernetes/core/networking/nginx-int-ingress/services/home-assistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app home-assistant
  namespace: networking
spec:
  ingressClassName: "nginx"
  rules:
    - host: &host home-assistant.${LOCAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8123
  tls:
    - hosts:
        - *host
